--- a/Tugas2_535200060_Melvin_Pramudita/HTML/biodata.html
+++ b/Tugas2_535200060_Melvin_Pramudita/HTML/biodata.html
@@ -26,7 +26,7 @@
     <section id="section">
  
         <div id="sidebar">
-            <img src="/images/_DSC8079.jpg" id="gsb" alt="test">
+            <img src="/images/109787.jpg" id="gsb" alt="test">
             <h1 id="sdname">Melvin <dd>Pramudita</dd></h1>
         </div>
  
