--- a/Tugas2_535200060_Melvin_Pramudita/HTML/index.html
+++ b/Tugas2_535200060_Melvin_Pramudita/HTML/index.html
@@ -27,23 +27,16 @@
    <section class="section">
 
         <div id="sidebar">
-            <img src="/images/_DSC8079.jpg" id="gsb" alt="test">
+            <img src="/images/109787.jpg" id="gsb" alt="test">
             <h1 id="sdname">Melvin Pramudita</h1>
         </div>
 
         <article>
             <h1>ABOUT ME</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum quibusdam perferendis atque, minima aliquid beatae corporis voluptatem soluta fugit facere natus. Non enim dolores soluta voluptates temporibus aperiam sunt ipsum.</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam perspiciatis aspernatur placeat quos sunt dolor aut dolore, cupiditate, voluptatibus nemo eaque, eveniet quis eligendi magnam laborum veniam doloribus suscipit ratione?</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum quibusdam perferendis atque, minima aliquid beatae corporis voluptatem soluta fugit facere natus. Non enim dolores soluta voluptates temporibus aperiam sunt ipsum.</p>
+            <p>Nama saya Melvin Pramudita dan saya adalah murid FTI di Universita Tarumanagara
+            <p>Saya suka bermain dengan komputer dan suatu saat ingin berkerja sebagai game developer dan berharap bisa membuat company membuat game di Indonesia
        </article>
         
-        <article>
-            <h1>ABOUT ME</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum quibusdam perferendis atque, minima aliquid beatae corporis voluptatem soluta fugit facere natus. Non enim dolores soluta voluptates temporibus aperiam sunt ipsum.</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam perspiciatis aspernatur placeat quos sunt dolor aut dolore, cupiditate, voluptatibus nemo eaque, eveniet quis eligendi magnam laborum veniam doloribus suscipit ratione?</p>
-        </article>
-    
     </section>
 
    <footer id="kaki">
